--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.11",
-    "request": "^2.88.2"
+    "react-router-dom": "^5.1.2",
+    "request": "^2.88.2",
+    "routes": "^2.1.0"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
