--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server",
-    "server": "nodemon server"
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "\"Brad Traversy\"",
   "license": "ISC",
@@ -17,12 +19,12 @@
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.11",
+    "concurrently": "^5.1.0",
     "react-router-dom": "^5.1.2",
     "request": "^2.88.2",
     "routes": "^2.1.0"
   },
   "devDependencies": {
-    "concurrently": "^5.1.0",
     "nodemon": "^2.0.2"
   }
 }
