--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "devconnector",
   "version": "1.0.0",
-  "description": "Social network for developer",
+  "description": "Social network for developers",
   "main": "server.js",
   "scripts": {
     "start": "node server",
@@ -19,12 +19,12 @@
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.11",
-    "concurrently": "^5.1.0",
     "react-router-dom": "^5.1.2",
     "request": "^2.88.2",
     "routes": "^2.1.0"
   },
   "devDependencies": {
+    "concurrently": "^5.1.0",
     "nodemon": "^2.0.2"
   }
 }
