--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "\"Brad Traversy\"",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
     "config": "^3.2.5",
     "express": "^4.17.1",
@@ -20,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.11",
     "react-router-dom": "^5.1.2",
+    "redux-promise": "^0.6.0",
     "request": "^2.88.2",
     "routes": "^2.1.0"
   },
